# StudyQualificationApplication

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/design/: architecture.md
docs/requirements/: requirements.md
docs/specs/: functional_spec.md
src/study_python/: logging_config.py  main.py
src/study_python/gui/: __init__.py  main_window.py
src/study_python/gui/dialogs/: __init__.py  book_management_dialog.py  book_review_dialog.py  book_schedule_dialog.py  goal_dialog.py  notification_detail_dialog.py  study_log_dialog.py  task_dialog.py  task_study_log_logic.py
src/study_python/gui/pages/: __init__.py  book_page.py  dashboard_page.py  gantt_page.py  goal_page.py  settings_page.py  stats_page.py
src/study_python/gui/theme/: __init__.py  theme_manager.py
src/study_python/gui/widgets/: __init__.py  activity_chart_section.py  bookshelf_widget.py  consistency_card.py  daily_activity_chart.py  dashboard_widget_frame.py  gantt_chart.py  goal_stats_section.py  header_bar.py  japanese_calendar_widget.py  milestone_button.py  milestone_popup.py  milestone_section.py  navigation_drawer.py  notification_button.py  notification_popup.py  personal_record_card.py  sidebar.py  study_log_table.py  study_timer.py  today_study_banner.py  weekly_comparison_card.py  widget_palette_panel.py
src/study_python/models/: __init__.py  book.py  goal.py  notification.py  study_log.py  task.py
src/study_python/repositories/: __init__.py  book_repository.py  goal_repository.py  json_storage.py  notification_repository.py  study_log_repository.py  task_repository.py
src/study_python/services/: __init__.py  book_gantt_service.py  book_service.py  dashboard_layout_service.py  data_export_service.py  gantt_calculator.py  goal_service.py  holiday_service.py  motivation_calculator.py  notification_service.py  study_log_service.py  study_stats_calculator.py  task_service.py
tests/: test_logging_config.py
tests/gui/: __init__.py  conftest.py  test_activity_chart_section.py  test_book_management_dialog.py  test_book_page.py  test_book_review_dialog.py  test_book_schedule_dialog.py  test_bookshelf_widget.py  test_consistency_card.py  test_daily_activity_chart.py  test_dashboard_page.py  test_dashboard_widget_frame.py  test_gantt_chart.py  test_goal_dialog.py  test_goal_stats_section.py  test_header_bar.py  test_japanese_calendar_widget.py  test_main_window.py  test_milestone_button.py  test_milestone_popup.py  test_milestone_section.py  test_navigation_drawer.py  test_notification_button.py  test_notification_detail_dialog.py  test_notification_popup.py  test_pages.py  test_personal_record_card.py  test_settings_page.py  test_sidebar.py  test_stats_page.py  test_study_log_dialog.py  test_study_log_table.py  test_study_timer.py  test_task_dialog.py  test_task_study_log_logic.py  test_theme_manager.py  test_today_study_banner.py  test_weekly_comparison_card.py  test_widget_palette_panel.py
tests/models/: __init__.py  test_book.py  test_goal.py  test_notification.py  test_study_log.py  test_task.py
tests/repositories/: __init__.py  test_book_repository.py  test_goal_repository.py  test_json_storage.py  test_notification_repository.py  test_study_log_repository.py  test_task_repository.py
tests/services/: __init__.py  test_book_gantt_service.py  test_book_service.py  test_dashboard_layout_service.py  test_data_export_service.py  test_gantt_calculator.py  test_goal_service.py  test_holiday_service.py  test_motivation_calculator.py  test_notification_service.py  test_study_log_service.py  test_study_stats_calculator.py  test_task_service.py
